[tool.poetry]
name = "simple_transformers"
version = "0.1.0"
description = "Simple examples of training & sampling from transformer language models."
authors = ["Logan Walls <2934282+LoganWalls@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.9"
torch = [
  { platform = "linux", url = "https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp39-cp39-linux_x86_64.whl" },
  { platform = "darwin", url = "https://download.pytorch.org/whl/cpu/torch-1.11.0-cp39-none-macosx_11_0_arm64.whl" },
]
transformers = "^4.19.2"
datasets = "^2.2.2"
pandas = "^1.4.2"
altair = "^4.2.0"
altair-saver = "^0.5.0"
tqdm = "^4.64.0"
accelerate = "^0.9.0"
typed-argument-parser = "^1.7.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipdb = "^0.13.9"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
